--- a/frontend/iorio/src/index.css
+++ b/frontend/iorio/src/index.css
@@ -17,3 +17,16 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+h1 {
+  font-size: 80px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+main {
+  z-index: 1;
+  position: relative;
+}
