feat: get categories - add styles in home

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Teko", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -19,7 +20,7 @@
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 40px;
 }
 
 h2 {
